<resources>
    <string name="app_name">Força de Venda</string>
    <string name="action_settings">Salvar</string>
    <string name="title_activity_pedido_item">Pedido</string>
    <string name="title_activity_add_item_pedido">Produto</string>
    <string name="action_enviar_agora">Enviar Pedido</string>
    <string name="action_excluir_pedido">Excluir Pedido</string>
    <string name="action_lista_empresa_diversos">Diversos</string>
    <string name="action_lista_empresa_configuracoes">Configurações</string>
    <string name="action_update_dados">Enviar Pedidos/Clientes</string>
    <string name="action_enviar_apenas_cliente">Enviar apenas Clientes</string>
    <string name="action_download_dados">Importar Dados</string>
    <string name="title_activity_form_cliente">Colocar Nome do Cliente Aqui!!!</string>
    <string name="title_activity_main">Clientes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_busca_produtos">Produtos</string>
    <string name="title_activity_clientes">ClientesActivity</string>
    <string name="title_activity_configuracao">Servidor FTP</string>
    <string name="delete_pedido">Deseja realmente apagar o pedido ?</string>
    <string name="limpar_banco">Será apagado;\n
                                1) Todos pedidos enviados;\n
                                2) Não será apagado pedidos não enviados;\n
                                3) Limpar arquivos temporários deste App.\n
    </string>


    <!-- A -->
    <string name="action_about">Sobre</string>
    <string name="about_dialog_text">
<![CDATA[
<b>Aplicativo Força de Venda 2016</b><br>
Versão %s - 22<br><br>
<a href="http://www.najasoftware.com.br">http://www.najasoftware.com.br</a><br><br>
	]]>
	</string>
    <string name="about_dialog_title">Naja Sistemas</string>

    <!--B -->
    <string name="buscar">Buscar</string>

    <!-- C -->
    <string name="configuracoes">Configurações</string>
    <string name="produtos">Produtos</string>

    <!-- E -->
    <string name="grupos">Grupos</string>

    <!-- L -->
    <string name="login">Entrar</string>

    <!-- N -->
    <string name="nav_drawer_username">Lemoel Marques</string>
    <string name="nav_drawer_email">lemoel@gmail.com</string>
    <string name="no">não</string>

    <string name="action_my_location">Localização Atual</string>

    <!-- O -->
    <string name="ok">OK</string>

    <!--P -->
    <string name="pedido">Pedido</string>
    <string name="pagamento">Pagamento</string>
    <string name="pedidos_enviados">Pedidos Enviados</string>

    <!-- S -->
    <string name="senha">Senha</string>
    <string name="sobre">Sobre</string>
    <string name="site_da_naja">Site Naja Sistemas</string>
    <string name="sair">Sair</string>

    <!--U-->
    <string name="usuario">Usuário</string>

    <!--U-->
    <string name="vazio"></string>


    <!--Y-->
    <string name="yes">sim</string>

    <string name="title_activity_carro">Carro</string>
    <string name="title_activity_cad_cliente">Cadastro de Cliente</string>
    <string name="title_activity_activity_add_item_pedido">activity_add_item_pedido</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="title_activity_pedid">PedidActivity</string>
    <string name="title_activity_categoria_produto">CategoriaProdutoActivity</string>
    <string name="title_activity_produto">ProdutoActivity</string>
    <string name="title_activity_configurarocoes">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="Porcentagem">Porcentagem</string>

</resources>