<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.LoginActivity">

    <!-- Text usuario-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#212121"
        android:text="@string/usuario" />
    <!--Login de acesso -->
    <EditText
        android:id="@+id/tLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:inputType="text"
        android:singleLine="true" />

    <!-- Texto da Senha -->
    <TextView
        android:layout_width="match_parent"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#212121"
        android:text="@string/senha" />

    <!-- Senha do usuario -->
    <EditText
        android:id="@+id/tSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:inputType="textPassword"
        android:singleLine="true" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/login"
        android:layout_gravity="center"
        android:elevation="21dp"
        android:onClick="onClickBtLogin"/>

    <Button
        android:id="@+id/btConfigurarTelaLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/action_lista_empresa_configuracoes"
        android:layout_gravity="center"
        android:elevation="21dp"
        android:onClick="onClickBtConfiguracoes"/>

</LinearLayout>